--- a/angular.json
+++ b/angular.json
@@ -73,7 +73,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "app:build"
+            "browserTarget": "app:build",
+            "proxyConfig": "proxy.config.json"
           },
           "configurations": {
             "production": {
@@ -171,6 +172,7 @@
     }
   },
   "cli": {
+    "analytics": "12d787b8-3416-43fa-8c41-92709f63a045",
     "defaultCollection": "@ionic/angular-toolkit"
   },
   "schematics": {
